--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //	implementation 'javax.inject:javax.inject:1' // 스프링부트 3.0 미만
 	implementation 'jakarta.inject:jakarta.inject-api:2.0.1' // 스프링부트 3.0 이상
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	//lombok 라이브러리 추가 시작
 	compileOnly 'org.projectlombok:lombok'
